--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -3,7 +3,7 @@
 ---
 
 <article
-    class="prose max-w-full text-dark prose-h1:mb-6 prose-h1:font-serif prose-h1:text-3xl prose-h1:font-semibold prose-p:text-base/normal prose-li:text-base/relaxed prose-img:rounded-xl"
+    class="prose max-w-full text-dark prose-headings:font-serif prose-headings:font-semibold prose-h1:mb-6 prose-h1:text-3xl prose-p:text-base/normal prose-li:text-base/relaxed prose-img:rounded-xl"
 >
     <slot />
 </article>
