--- a/src/components/Listing.astro
+++ b/src/components/Listing.astro
@@ -49,7 +49,7 @@ const kinds = [...new Set(posts.map((post) => post.data.kind))];
         }
     </div>
 
-    <div id="posts-list">
+    <div id="posts-list" class="flex flex-col gap-12">
         {
             posts.map((post) => {
                 const breadcrumbs = post.id
@@ -60,21 +60,29 @@ const kinds = [...new Set(posts.map((post) => post.data.kind))];
                     });
                 const PostIcon = getIcon(post.data.kind);
                 return (
-                    <div class="post-item mb-12" data-kind={post.data.kind}>
-                        <Breadcrumbs
-                            baseUrl="/posts"
-                            breadcrumbs={[...breadcrumbs]}
-                        />
-                        <div class="-ml-10 flex items-start gap-2 text-2xl">
+                    <div
+                        class="post-item flex flex-col gap-1"
+                        data-kind={post.data.kind}
+                    >
+                        <div class="flex flex-row items-center gap-1">
                             {PostIcon && (
-                                <PostIcon class="h-8 w-8 stroke-dark" />
+                                <PostIcon class="h-4 items-end stroke-dark-gray" />
                             )}
-                            <h2 class="font-semibold text-dark">
-                                <a href={`/posts/${post.id}`}>
-                                    {post.data.title ?? "Unknown"}
-                                </a>
-                            </h2>
+                            <Breadcrumbs
+                                baseUrl="/posts"
+                                breadcrumbs={[...breadcrumbs]}
+                            />
                         </div>
+                        <h2 class="text-2xl font-semibold text-dark">
+                            <a href={`/posts/${post.id}`}>
+                                {post.data.title ?? post.id.split("/").pop()}
+                            </a>
+                        </h2>
+                        {post.data.description && (
+                            <span class="font-sans text-sm/snug text-dark-gray italic">
+                                {post.data.description}
+                            </span>
+                        )}
                     </div>
                 );
             })
@@ -118,7 +126,7 @@ const kinds = [...new Set(posts.map((post) => post.data.kind))];
                 postItems?.forEach((item) => {
                     const postKind = item.getAttribute("data-kind");
                     if (!effectiveFilter || postKind === effectiveFilter) {
-                        item.style.display = "block";
+                        item.style.display = "";
                     } else {
                         item.style.display = "none";
                     }
