--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -28,6 +28,10 @@ const breadcrumbs = post.id
 <Base>
     <div class="m-auto max-w-2xl">
         <Breadcrumbs baseUrl="/posts" breadcrumbs={[...breadcrumbs]} />
-        <Prose><h1 class="text-dark">{post.data.title}</h1><Content /></Prose>
+        <Prose
+            ><h1 class="mt-2 text-dark">
+                {post.data.title ?? post.id.split("/").pop()}
+            </h1><Content /></Prose
+        >
     </div>
 </Base>
